# mass-bot

./: .gitignore  .pre-commit-config.yaml  main.py  masstimes.csv  pyproject.toml  requirements-dev.txt  setup.cfg
massbot/: __init__.py  commands.py  data.py  loop.py  massbot.py
