[build-system]
requires = [
  "setuptools>=42",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 80
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
      \.eggs
    | \.git
    | \.pytest_cache
    | _build
    | build
    | dist
    | venv
)/
'''

[tool.pyright]
include = ["massbot"]
exclude = ["tests"]
defineConstant = { DEBUG = true }
venvPath = "venv"
