[metadata]
name = massbot
version = 0.0.1
author = Jerry Zhang
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    discord>=2.0.0
    python-dotenv>=0.21.0
python_requires = >=3.10

[options.entry_points]
console_scripts =
    massbot = massbot:main

[flake8]
max-line-length = 100
